--- a/content/de/2.history/9.bp.md
+++ b/content/de/2.history/9.bp.md
@@ -1,11 +1,18 @@
 ---
 title: British Petroleum
-description: Designed a logo for BP.
+description: Ich habe ein Logo für BP entworfen.
 navigation:
   icon: 
 seo:
-  description: Logo design, British Petroleum
+  description: Logo-Design, British Petroleum
 ---
 
-Designed a logo for internal division of British Petroleum, "Pretrade Analytics". 
-This was part of a larger project, in which I designed the UI for an internal dashboard.
+Ich habe ein Logo für eine interne Abteilung von British Petroleum namens "Pretrade Analytics" entworfen. Dies war Teil eines größeren Projekts, in dem ich die Benutzeroberfläche für ein internes Dashboard entworfen habe.
+
+<br/>
+
+![BP Pretrade Analytics](/images/bp/bp_pretrade_0.png)
+
+<br/>
+
+![BP Pretrade Analytics](/images/bp/bp_pretrade_1.png)
