--- a/content/en/2.history/9.bp.md
+++ b/content/en/2.history/9.bp.md
@@ -9,3 +9,10 @@ seo:
 
 Designed a logo for internal division of British Petroleum, "Pretrade Analytics". 
 This was part of a larger project, in which I designed the UI for an internal dashboard.
+<br/>
+
+![BP Pretrade Analytics](/images/bp/bp_pretrade_0.png)
+
+<br/>
+
+![BP Pretrade Analytics](/images/bp/bp_pretrade_1.png)
