--- a/content/de/1.art/2.introduction.md
+++ b/content/de/1.art/2.introduction.md
@@ -1,20 +1,13 @@
 ---
-title: Introduction
-description: Art is work. Work is art.
+title: Einleitung
+description: Kunst ist Arbeit. Arbeit ist Kunst.
 navigation:
   icon: 
 seo:
-  title: Introduction
-  description: Art is work. Work is art.
+  title: Einleitung
+  description: Kunst ist Arbeit. Arbeit ist Kunst.
 ---
 
-The most valuable type of art is functional art becaused it is used. Sometimes by millions of people daily.
-I consider all of my visual design work as art. 
+Die wertvollste Art von Kunst ist funktionale Kunst. Die schönste Kunst kommt in einer Form von Marketingmaterial. Ich betrachte alle meine visuellen Designarbeiten als Kunst.
 
-Indeed the most beautiful art I have seen has been some kind of marketing material.
-Something somebody has created to help sell something. This somebody is likely still alive and might share more in common with me than someone who created something that sits in a museum.
-
-I do wonder at times if the art we see in museums served another purpose at one point in time.
-
-Music videos, Commercials, Magazine ads, Party Flyers.
-This is art. The creators are alive and interact with us every day.
+Musikvideos, Werbespots, Zeitschriftenanzeigen, Party-Flyer. Das ist Kunst. Die Schöpfer sind am Leben.
