remove videos altogether

--- a/content/en/1.art/3.open-source.md
+++ b/content/en/1.art/3.open-source.md
@@ -49,7 +49,7 @@ Desktop:
 
 | My Version |    
 |---------|
-| :video{ loop src="/images/bg/bg-screenrecording-0.webm"} |
+| ![BuidlGuidl UI improvements](/images/bg/new_web-mercs-layout-members.png)  |
 
 
 ::callout
@@ -85,7 +85,7 @@ Along with the Mercs site, I also created some artwork to plop in. The artwork i
 
 | My Contribution |    
 |---------|
-| :video{loop src="/images/bg/sandgarden/screenrecording-sandgarden-0.webm"} |
+| ![BuidlGuidl UI improvements](/images/bg/sandgarden/new_web-sandgarden-layout-members.png) |
 
 <br/><br/>
 
