--- a/content/en/1.art/3.open-source.md
+++ b/content/en/1.art/3.open-source.md
@@ -21,17 +21,7 @@ Here are some recent contributions.
 |---------|-----------|
 | ![BuidlGuidl UI improvements](/images/bg/0/screenshot-mercs-mobile-home-0.png)  |  ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-0b.png) |
 
-<br/><br/>
-
-| landing (mobile) A  | landing (mobile) B    | 
-|---------|-----------|
-| ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-1.png)     |  ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-4.png) |
-
-<br/><br/>
-
-| landing (mobile) C  | landing (mobile) D   | 
-|---------|-----------|
-| ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-2.png)     |  ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-3.png) |
+<br/>
 
 ::callout
 Considerations:  
@@ -55,7 +45,7 @@ Desktop:
 ::callout
 Considerations:  
 My theory, if we get the display of the smart contract data right, 
-we are free to do whatever we want with the rest of the UI. The UI for people's money has to be legit though.
+we are free to do whatever we want with the rest of the UI - but the UI for people's money has to be legit.
 Testing this theory, I created some artwork.   
 
 <br/> <br/>
