content edits: The Source

--- a/content/en/2.history/5.the-source.md
+++ b/content/en/2.history/5.the-source.md
@@ -8,4 +8,4 @@ seo:
 ---
 
 Worked at The Source Magazine. Web design + development.
-Unexpected role educating the staff on digital ad management software.
+Took on an unexpected additional role educating the staff on digital ad management software.
