--- a/content/en/cards/1.cards.md
+++ b/content/en/cards/1.cards.md
@@ -1,7 +1,7 @@
 ---
 title: Cards for print
-layout: default 
-description: 
+layout: nopager
+description: desc string
 navigation: false
 seo:
   title: Introduction
