--- a/content/de/1.art/3.open-source.md
+++ b/content/de/1.art/3.open-source.md
@@ -16,22 +16,11 @@ Here are some recent contributions.
 ## BG Mercs
 
 <br/>
-
 | Existing BuidlGuidl UI    | My Contribution   | 
 |---------|-----------|
 | ![BuidlGuidl UI improvements](/images/bg/0/screenshot-mercs-mobile-home-0.png)  |  ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-0b.png) |
 
-<br/><br/>
-
-| landing (mobile) A  | landing (mobile) B    | 
-|---------|-----------|
-| ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-1.png)     |  ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-4.png) |
-
-<br/><br/>
-
-| landing (mobile) C  | landing (mobile) D   | 
-|---------|-----------|
-| ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-2.png)     |  ![BuidlGuidl UI improvements](/images/bg/0/mercs-home-3.png) |
+<br/>
 
 ::callout
 Considerations:  
@@ -49,13 +38,13 @@ Desktop:
 
 | My Version |    
 |---------|
-| :video{ controls loop src="/images/bg/bg-screenrecording-0.webm"} |
+| ![BuidlGuidl UI improvements](/images/bg/new_web-mercs-layout-members.png)  |
 
 
 ::callout
 Considerations:  
 My theory, if we get the display of the smart contract data right, 
-we are free to do whatever we want with the rest of the UI. The UI for people's money has to be legit though.
+we are free to do whatever we want with the rest of the UI - but the UI for people's money has to be legit.
 Testing this theory, I created some artwork.   
 
 <br/> <br/>
@@ -85,12 +74,12 @@ Along with the Mercs site, I also created some artwork to plop in. The artwork i
 
 | My Contribution |    
 |---------|
-| :video{ controls loop src="/images/bg/sandgarden/screenrecording-sandgarden-0.webm"} |
+| ![BuidlGuidl UI improvements](/images/bg/sandgarden/new_web-sandgarden-layout-members.png) |
 
 <br/><br/>
 
 
 | Landing (mobile)  | 'Members' page (mobile)    | 
 |---------|-----------|
-| ![BuidlGuidl UI improvements](/images/bg/sandgarden/sandgarden-mobile-0.png)     |  ![BuidlGuidl UI improvements](/images/bg/sandgarden/sandgarden-mobile-members-0.png) |
+| ![BuidlGuidl UI improvements](/images/bg/sandgarden/new_sandgarden-layout-home.png)     |  ![BuidlGuidl UI improvements](/images/bg/sandgarden/new_sandgarden-layout-members.png) |
 
