--- a/content/de/1.kunst/2.vorwort.md
+++ b/content/de/1.kunst/2.vorwort.md
@@ -1,14 +1,15 @@
 ---
-title: Einleitung
+title: Vorwort
 description: Kunst ist Arbeit. Arbeit ist Kunst.
 layout: docs
 navigation:
   icon: 
 seo:
-  title: Einleitung
+  title: Vorwort
   description: Kunst ist Arbeit. Arbeit ist Kunst.
 ---
 
 Die wertvollste Art von Kunst ist funktionale Kunst. Die schönste Kunst kommt in einer Form von Marketingmaterial. Ich betrachte alle meine visuellen Designarbeiten als Kunst.
 
 Musikvideos, Werbespots, Zeitschriftenanzeigen, Party-Flyer. Das ist Kunst. Die Schöpfer sind am Leben.
+
