--- a/content/en/2.history/1.intro.md
+++ b/content/en/2.history/1.intro.md
@@ -19,7 +19,7 @@ From the Internet Archive, I was able to find some of my old work from my origin
 |---------|-----------|
 | <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/573" target="_blank"> Procter & Gamble </a> |  2007 |
 | <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/2" target="_blank"> Coca-Cola </a> |  2007 |
-| <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/579" target="_blank"> Apple </a> |  2007 |
+| <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/579" target="_blank"> iTunes </a> |  2007 |
 | <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/585" target="_blank"> NIKEiD </a> |  2007 |
 
 
