--- a/content/de/2.Geschichte/1.intro.md
+++ b/content/de/2.Geschichte/1.intro.md
@@ -18,7 +18,7 @@ Aus dem Internet-Archiv konnte ich einige meiner alten Arbeiten von meiner urspr
 |---------|-----------|
 | <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/573" target="_blank"> Procter & Gamble </a> |  2007 |
 | <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/2" target="_blank"> Coca-Cola </a> |  2007 |
-| <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/579" target="_blank"> Apple </a> |  2007 |
+| <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/579" target="_blank"> iTunes </a> |  2007 |
 | <a href="https://web.archive.org/web/20080111220013/http://chidi.la/work/585" target="_blank"> NIKEiD </a> |  2007 |
 
 
