--- a/content/en/2.history/8.nike-id.md
+++ b/content/en/2.history/8.nike-id.md
@@ -1,12 +1,12 @@
 ---
 title: NIKE
-description: Nike work
+description: Project for Nike.
 navigation:
   icon: 
 seo:
-  description: Nike Project 
+  description: Project for Nike.
 ---
 
-Worked on a team with Scott Briskman and Judy Ng for Nike.
+I worked on a project for Nike  on a team with Scott Briskman as Creative Director and Judy Ng as Art Director.
 
 :video{autoplay controls loop src="/images/nike/nike-2.webm"}
